tests/syntax_error/double_point5_exp.jou
def foo() -> None:
    x = .5e3   # Error: expected an expression, got '.'
